# AI-interior-designer

./: .env.example  .gitignore  README.md  design_principles.md  pyproject.toml
config/: furniture_anchor_relations.learned.yaml  furniture_anchor_relations.yaml  preference_theta.learned.yaml
examples/: studio.json
scripts/: build_kenney_catalog.py  cache_llm_designs.py  calibrate_kenney_yaw.py  run_floor.py  run_room.py  run_server.py  seed_category_distances.py
tests/: helpers.py  test_adjacent_chain.py  test_anchor_ip_constraints.py  test_anchor_relations.py  test_anchor_structure.py  test_api_pipeline.py  test_architecture.py  test_auto_stack_overlap.py  test_baseline_prompt.py  test_blueprint_pipeline.py  test_category_constraints.py  test_category_pair_ip.py  test_custom_scene_graph.py  test_decor_staging.py  test_design_rules.py  test_domain_transform.py  test_draft_to_hints.py  test_expand_layout_draft.py  test_facing_orient.py  test_few_shot.py  test_fix_model_id.py  test_front_clearance_ip.py  test_grid_and_bed.py  test_hybrid_pipeline.py  test_ip_feasible_bedroom.py  test_ip_hard_constraints.py  test_kenney_coords.py  test_llm_validate.py  test_mock_layout_scale.py  test_model_id_validate.py  test_no_overlap.py  test_orientation_labels.py  test_pipeline_theta.py  test_placement_wall_guidance.py  test_preference_api.py  test_preference_features.py  test_preference_theta.py  test_preference_trainer.py  test_refine_mode.py  test_relational_constraints.py  (+15 more)
web/: index.html  labeler.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+152 files in other folders)
