[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colayout"
version = "0.1.0"
description = "Co-Layout-inspired per-room furniture placement with grid IP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.10",
    "openai>=1.40",
    "pydantic>=2.7",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
web = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
